--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -550,7 +550,7 @@ challenging due to streaming pathways and ray effects; these can be seen
 clearly in the figures in the publication. The test cases are also
 of interest in that they are relevant to real-world application problems. We
 direct the reader to the earlier article by Rowland et al.\ for full detail
-\cite{kr18}.
+\cite{kr18}. All data and scripts for making plots associated with this work can be found at \url{https://github.com/kellyrowland/ldo-mc-vr/tree/master/data}.
 
 %%---------------------------------------------------------------------------%%
 \subsection{Steel Plate Embedded in Water}
@@ -979,7 +979,7 @@ lower-order (\textit{e.g.}, order 5, which is 36 quadrature points) LDO
 quadrature set to generate variance reduction parameters for a Monte Carlo
 mesh tally using the \fwc\ method.
 
-This is a true challenge problem. We note that for both the CADIS and \fwc\ results, the solution was not clearly obtained. This problem is very difficult to solve---Wilson and Slaybaugh \cite{wilsonslaybaugh} were unable to obtain accurate solutions using a reasonable number of particles with analog Monte Carlo or CADIS or \fwc\ despite many deterministic parameter choices. The meaning of the recommendations here is that, with enough particles, a correct solution would eventually be obtained and using the method with the best FOM will get there the fastest. 
+This is a true challenge problem. We note that for bot  h the CADIS and \fwc\ results, the solution was not clearly obtained. This problem is very difficult to solve---Wilson and Slaybaugh \cite{wilsonslaybaugh} were unable to obtain accurate solutions using a reasonable number of particles with analog Monte Carlo or CADIS or \fwc\ despite many deterministic parameter choices. The meaning of the recommendations here is that, with enough particles, a correct solution would eventually be obtained and using the method with the best FOM will get there the fastest. 
 
 \FloatBarrier
 %%---------------------------------------------------------------------------%%
